crates/decorous-frontend/src/css/snapshots/decorous_frontend__css__parser__tests__can_parse_more_complex_selectors-7.snap
---
source: crates/decorous-frontend/src/css/parser.rs
expression: parser.parse()
---
Ok(
    Css {
        rules: [
            Regular(
                RegularRule {
                    selector: [
                        Selector {
                            parts: [
                                SelectorPart {
                                    text: Some(
                                        "p",
                                    ),
                                    pseudoes: [
                                        Element(
                                            "after",
                                        ),
                                    ],
                                },
                            ],
                        },
                        Selector {
                            parts: [
                                SelectorPart {
                                    text: Some(
                                        "",
                                    ),
                                    pseudoes: [],
                                },
                                SelectorPart {
                                    text: Some(
                                        "span.yellow",
                                    ),
                                    pseudoes: [],
                                },
                            ],
                        },
                    ],
                    declarations: [
                        Declaration {
                            name: "color",
                            values: [
                                Css(
                                    "green",
                                ),
                            ],
                        },
                    ],
                },
            ),
        ],
    },
)
