crates/decorous-frontend/src/css/snapshots/decorous_frontend__css__parser__tests__parser_throws_errors_on_invalid_input-3.snap
---
source: crates/decorous-frontend/src/css/parser.rs
expression: parser.parse()
---
Err(
    ParseError {
        fragment: Location {
            offset: 28,
            length: 1,
            line: 1,
            column: 28,
        },
        help: Some(
            Help {
                corresponding_line: Some(
                    1,
                ),
                message: "declaration needs a closing semicolon",
            },
        ),
        err_type: ExpectedCharacter(
            ';',
        ),
    },
)
