crates/decorous-frontend/src/css/snapshots/decorous_frontend__css__parser__tests__parser_throws_errors_on_invalid_input-5.snap
---
source: crates/decorous-frontend/src/css/parser.rs
expression: parser.parse()
---
Err(
    ParseError {
        fragment: Location {
            offset: 18,
            length: 1,
            line: 1,
            column: 18,
        },
        help: None,
        err_type: ExpectedCharacter(
            '}',
        ),
    },
)
